# Cleaner

./: README.md  index.html  package-lock.json  package.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: admin.rs  analytics.rs  cleanup.rs  config_refs.rs  drive.rs  errors.rs  fixtures.rs  lib.rs  main.rs  models.rs  paths.rs  processes.rs  rules.rs  scan.rs  size.rs
src-tauri/src/v2/: duplicate.rs  fixtures.rs  history.rs  large_files.rs  migration.rs  mod.rs  models.rs  operations.rs  path_safety.rs  recycle_bin.rs  settings.rs
src-tauri/tests/: analytics_tests.rs  cleanup_tests.rs  config_refs_tests.rs  models_tests.rs  paths_tests.rs  rule_registry_tests.rs  scan_tests.rs  v2_duplicate_tests.rs  v2_history_tests.rs  v2_large_files_tests.rs  v2_migration_tests.rs  v2_operation_tests.rs  v2_recycle_bin_tests.rs  v2_settings_tests.rs
src/__tests__/: appShell.test.tsx  confirmStep.test.tsx  duplicateCleanerPage.test.tsx  grouping.test.ts  historyPage.test.tsx  largeFileMigrationPage.test.tsx  progressSteps.test.tsx  selection.test.ts  settingsPage.test.tsx  sidebarShell.test.tsx  suggestionsStep.test.tsx  v2Api.test.ts
src/components/: AppShell.tsx  CleanStep.tsx  CleanupItemRow.tsx  ConfirmStep.tsx  ErrorPanel.tsx  PrivacyNotice.tsx  ResultStep.tsx  RiskBadge.tsx  ScanStep.tsx  SidebarShell.tsx  StepIndicator.tsx  SuggestionsStep.tsx  WelcomeStep.tsx
src/domain/: grouping.ts  models.ts  selection.ts  v2.ts
src/services/: mockReport.ts  tauriApi.ts  v2Api.ts  v2MockData.ts
src/styles/: theme.css
(+13 files in other folders)
