[package]
name = "c-drive-cleaner"
version = "0.1.0"
description = "Safe local Windows C drive cleaner"
authors = ["C Drive Cleaner"]
edition = "2021"

[lib]
name = "c_drive_cleaner"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0.0", features = [] }
thiserror = "2.0"
sysinfo = "0.33"
walkdir = "2.5"
time = { version = "0.3", features = ["formatting"] }
