[package]
name = "c-drive-cleaner"
version = "0.2.0"
description = "Safe local Windows disk cleaner"
authors = ["Cleaner"]
edition = "2021"

[lib]
name = "c_drive_cleaner"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "c_drive_cleaner_app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tauri = { version = "2.0.0", features = [] }
thiserror = "2.0"
sysinfo = "0.33"
trash = "5"
uuid = { version = "1", features = ["v4", "serde"] }
walkdir = "2.5"
time = { version = "0.3", features = ["formatting"] }

[dev-dependencies]
tempfile = "3.14"
